tests/rosetta/out/C/amicable-pairs.error
cc: exit status 1
/tmp/amicable-pairs.c: In function ‘mochi_main’:
/tmp/amicable-pairs.c:86:27: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
   86 |       printf("%s\n", "  " + pad(n, 5) + " and " + pad(m, 5));
      |                      ~~~~ ^ ~~~~~~~~~
      |                      |      |
      |                      char * char *
