tests/rosetta/out/C/amicable-pairs.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
int pfacSum(int i) {
  int sum = 0;
  int p = 1;
  while (p <= i / 2) {
    if (i % p == 0) {
      sum = sum + p;
    }
    p = p + 1;
  }
  return sum;
}

const char *pad(int n, int width) {
  char *tmp1 = _str(n);
  const char *s = tmp1;
  while (strlen(s) < width) {
    char *tmp2 = concat_string(" ", s);
    s = tmp2;
  }
  return s;
}

int main() {
  list_int sums = list_int_create(0);
  int i = 0;
  while (i < 20000) {
    list_int tmp3 = list_int_create(1);
    tmp3.data[0] = 0;
    sums = tmp3;
    i = i + 1;
  }
  i = 1;
  while (i < 20000) {
    sums[i] = pfacSum(i);
    i = i + 1;
  }
  printf("The amicable pairs below 20,000 are:\n");
  int n = 2;
  while (n < 19999) {
    int m = sums.data[n];
    if (m > n && m < 20000 && n == sums.data[m]) {
      printf("%s\n", "  " + pad(n, 5) + " and " + pad(m, 5));
    }
    n = n + 1;
  }
}

int main() {
  main();
  return 0;
}
